--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>moneky</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>monkey on the bar</title>
+    <style> p{color: rgb(0, 255, 34)};</style>
+    <style> body{background-color: rgb(87, 87, 192)};</style>
 </head>
-<body>
-  
+<body> 
+<h1 style="font-size: 48px;font-family: Arial, Helvetica, sans-serif;text-align: center;">monkey on the hat</h1>
+    <p>this is a monkey on the bar</p>
+<b><p>this is a monkey on the bar in bold</p></b>
+<img src="Images/fun monkey.jpg" alt="Italian Trulli">
+<i><p>she sells sea shells by the seashore</p></i>
+<hr>
+<b><p>she sells sea shells by the seashore</p></b>
+<hr>
+<p><mark>mnonkey</mark></p>
+<hr>
+<del><p>she sells sea shells by the seashore</p></del>
+<hr>
+<sub><p>she sells sea shells by the seashore</p></sub>
+
+<a style="text-decoration: none;" href="https://fortnite.com" target="_blank">contact me</a>
+
+<img src="Images/funny monkey.jpg" width="470" height="auto">
+<hr>
+<p style="color: rgb(171, 178, 185);font-family: Arial, Helvetica, sans-serif;font-size: 20px;"> THIS IS THE GREY AND ARIAL ANd 20px p tag becasue i dont wanna do em all</p>
+<hr>
+<a href="plampo.html">LIST OF SUBJECTS</a>
+<hr>
+<a href="UNDOREDED LIST.html">LIST OF PLACES</a>
 </body>
 </html>
