--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>monkey on the bar</title>
-    <style> p{color: rgb(0, 255, 34)};</style>
-    <style> body{background-color: rgb(87, 87, 192)};</style>
+    <style> 
+    p{color: rgb(0, 255, 34)}; 
+    body{background-color: rgb(87, 87, 192)};
+    </style>
 </head>
 <body> 
 <h1 style="font-size: 48px;font-family: Arial, Helvetica, sans-serif;text-align: center;">monkey on the hat</h1>
