--- a/scramybo.html
+++ b/scramybo.html
@@ -44,18 +44,48 @@
     width: 160px;
     height: 130px;
     text-align: center;
-    transition: 30s;
+    transition: 7s;
 }
 #div3:hover {
     height: 3000px;
+    width: 1000px;
+
+
+}
+
+#div4 {
+    background-color: rgba(255, 0, 0, 0.737);
+    margin-top: 50px;
+    width: 160px;
+    height: 130px;
+    text-align: center;
+    transition: 0.2s;
+
+}
+
+
+#div4:hover {
+    height: 500px;
+    width: 1000px;
+    color: rgb(217, 171, 127);
+    background-color: blueviolet;
+    
+
+
 
 
 
 }
 
 
+#fortnite {
+background-color: rgb(255, 255, 255);
+width: 1px;
+height: 367px;
 
 
+
+}
 </style>
 
 
@@ -67,6 +97,8 @@
 <div id="div1">scranky</div>
 <div id="div2">scranky2</div>
 <div id="div3">scrkany3</div>
+<div id="div4">srkanyyyykty</div>   
+<div id="fortnite"></div>
 
 
 </body>
